<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hoffmann</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">w320dp</string>
    <string name="enterRoom">Enter into my room</string>
    <string name="controlBoiler">Control my boiler</string>
    <string name="running">Heating</string>
    <string name="stopped">Stop</string>
    <string name="roomList">Room List</string>
    <string name="edit">Edit</string>
    <string name="schedule">Program</string>
    <string name="comfortable">Comf</string>
    <string name="saveE">Econ</string>
    <string name="antifreeze">Anti-freeze</string>
    <string name="boiler">Boiler</string>
    <string name="connecting">online</string>
    <string name="connectError">offline</string>
    <string name="chooseModel">Mode select&#160;&#160;&#160;&#160;</string>
    <string name="model1">Mode 1&#160;&#160;&#160;</string>
    <string name="model2">Mode 2&#160;&#160;&#160;</string>
    <string name="model3">Mode 3&#160;&#160;&#160;</string>
    <string name="customize">User-Defined</string>
    <string name="comfTemp">COMF:&#160;</string>
    <string name="saveTemp">ECON:&#160;</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="applyTo">Apply To&#160;</string>
    <string name="complete">Complete&#160;</string>
    <string name="curve">Temp Curve</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="config_wifi">Configure wifi</string>
    <string name="more_setting">More</string>
    <string name="connect_us">Contact us</string>
    <string name="uploading">Uploading room information...</string>
    <string name="noconnect">Un-connected</string>
    <string name="scheduleModel">TIMING MODE</string>
    <string name="partyModel">PARTY MODE</string>
    <string name="outModel">AWAY MODE</string>
    <string name="switchModel">OFF MODE</string>
    <string name="saveModel">ECONOMY MODE</string>
    <string name="autoModel">AUTO MODE</string>
    <string name="roomInfo">Room Info</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="deviceNumCannotBeNull">Device number can not be blank!</string>
    <string name="addDeviceSuccessed">Add Success!</string>
    <string name="deviceHasBeenBound">Sorry, this device has been bound.</string>
    <string name="dontHaveThisDevice">Sorry, the device is not exist.</string>
    <string name="pleaseChooseDay">Please select the application date.</string>
    <string name="applySuccessed">Apply Success!</string>
    <string name="applyFailed">Apply Failure!</string>
    <string name="sendHeatingStartSignal">Sent heating ON signal.</string>
    <string name="sendHeatingStopSignal">Sent heating OFF signal.</string>
    <string name="runningOk">Boiler is running OK</string>
    <string name="autoRepair">Boiler is repairing automatically</string>
    <string name="sendResetSignal">Sent reset signal.</string>
    <string name="tempTar">Target</string>
    <string name="tempOut">Outside</string>
    <string name="connectWifi">\n&#160;&#160;&#160;&#160;Please keep the phone is connecting to the thermostat wifi, then click NEXT.\n\n&#160;&#160;&#160;&#160;Or you can click skip, Later select "Configure wifi" in the menu to configure.</string>
    <string name="skip">Skip</string>
    <string name="nextStep">Next</string>
    <string name="passwordCannotBeNull">Password can not be blank!</string>
    <string name="usernameCannotBeNull">Username can not be blank!</string>
    <string name="pleaseInputUNPW">Please enter your username and password!</string>
    <string name="UNorPWError">Username or password error!</string>
    <string name="UNorPWCannotBeNull">Username or password can not be blank!</string>
    <string name="getUserInfoError">"Can't receive user info!"</string>
    <string name="loginToAccount">Sign in</string>
    <string name="un">Username</string>
    <string name="pw">Password</string>
    <string name="login">Sign in</string>
    <string name="registNewAccount">Register a new user</string>
    <string name="forgetPW">Forget password</string>
    <string name="rememberMe">Stay signed in</string>
    <string name="emailCannotBeNull">Email can not be blank!</string>
    <string name="emailError">Email format error!</string>
    <string name="UNError">Username must be a group of alphabet, digit or underscore, length from 2 to 30 bytes.</string>
    <string name="PWError">Password must be a group of alphabet or digit, length from 6 to 40 bytes.</string>
    <string name="RePwError">Passwords do not match!</string>
    <string name="registSuccessed">Registered success!</string>
    <string name="registFailed1">Register failure, the username had been used!</string>
    <string name="registFailed2">Register failure, the Email had been used!</string>
    <string name="registFailed">Register failure!</string>
    <string name="ok">Confirm</string>
    <string name="RoomWithoutName">Unnamed Room</string>
    <string name="key">Key</string>
    <string name="staticIP">Static IP</string>
    <string name="ipAddress">IP Address</string>
    <string name="mask">Subnet Mask</string>
    <string name="gateway">Gateway</string>
    <string name="chooseHomeWifi">Choose home WIFI</string>
    <string name="pleaseInputDeviceNum">Please enter device number</string>
    <string name="regist">Register</string>
    <string name="rePw">Confirm password</string>
    <string name="forBetterService">Please complete below questions that we</string>
    <string name="adviceComplete">can offer the best service to you!</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="roomName">Room name</string>
    <string name="tempHandler">Thermostat</string>
    <string name="serviceIP">Server IP：</string>
    <string name="searchingWifi">Searching WIFI...</string>
    <string name="loading">Loading...</string>
    <string name="loginning">Logging in...</string>
    <string name="netError">Network anomalies\nPlease check your network...</string>
    <string name="noMainController">Master controller is not connected</string>
    <string name="helpURL">helpEn.html</string>
    <string name="authMode">Authentication Mode</string>
    <string name="encrAlgo">Encryption Algorithm</string>

</resources>
