<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/muSetting"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/edit2"/>
    <item
        android:id="@+id/muSchedule"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/schedule2"/>
    <item
        android:id="@+id/muLogOut"
        android:orderInCategory="1"
        android:showAsAction="never|withText"
        android:title="@string/logout"/>

    <item
        android:id="@+id/muHelp"
        android:orderInCategory="2"
        android:showAsAction="never|withText"
        android:title="@string/help"/>
    
    <item
        android:id="@+id/muWifiSet"
        android:orderInCategory="3"
        android:showAsAction="never|withText"
        android:title="@string/config_wifi"/>
    
    <item
        android:id="@+id/muMoreSet"
        android:orderInCategory="4"
        android:showAsAction="never|withText"
        android:title="@string/more_setting"/>
    
    <item
        android:id="@+id/muConnect"
        android:orderInCategory="5"
        android:showAsAction="never|withText"
        android:title="@string/connect_us"/>

</menu>
