<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/form_marginLR"
    android:paddingRight="@dimen/form_marginLR"
    android:background="@drawable/bg5"
    android:paddingTop="@dimen/activity_top_margin" >

    <TextView
        android:id="@+id/tvSSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/key"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authMode" />

    <Spinner
        android:id="@+id/spinnerKeyMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrAlgo" />
    
    <Spinner
        android:id="@+id/spinnerKeyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroupDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="动态/静态地址"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbDHCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DHCP" />

        <RadioButton
            android:id="@+id/rbStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staticIP" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/llStatic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ipAddress" />

        <EditText
            android:id="@+id/etMask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/mask" />

        <EditText
            android:id="@+id/etGateway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/gateway" />
    </LinearLayout>

    <Button
        android:id="@+id/btApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ok" />

</LinearLayout>